--- a/ansible/host.ini
+++ b/ansible/host.ini
@@ -2,10 +2,11 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
- k8s-m1 ansible_host=10.4.1.38
- k8s-m2 ansible_host=10.4.1.22
- k8s-m3 ansible_host=10.4.1.25
- k8s-n1 ansible_host=10.4.1.26 
+k8s-proxy ansible_host=10.4.1.20
+k8s-m1 ansible_host=10.4.1.21
+k8s-m2 ansible_host=10.4.1.22
+k8s-m3 ansible_host=10.4.1.23
+k8s-n1 ansible_host=10.4.1.24 
 
 
 # ## configure a bastion host if your nodes are not directly reachable
@@ -26,13 +27,10 @@ k8s-m3
 
 [nodes]
 k8s-n1
-; k8s-n-2
-; k8s-n-3
-; # node5
-; # node6
 
-; #[calico_rr]
 
+[proxy]
+k8s-proxy
 ; [k8s_cluster:children]
 ; control_plane
 ; nodes
@@ -40,5 +38,5 @@ k8s-n1
 
 
 [all:vars]
-ansible_user=vagrant
+ansible_user=root
 #ansible_become_pass=
