Change hosts.ini and install.yaml

--- a/ansible/host.ini
+++ b/ansible/host.ini
@@ -31,9 +31,10 @@ k8s-n1
 
 [proxy]
 k8s-proxy
-; [k8s_cluster:children]
-; control_plane
-; nodes
+
+[k8s_cluster:children]
+control_plane
+nodes
 ; #calico_rr
 
 
