--- a/ansible/install.yml
+++ b/ansible/install.yml
@@ -4,17 +4,17 @@
   become: true
   remote_user: root
   roles:
+    - set-hostname
+    - set-time-zone
+    - set-hosts
     - install-tools
-    # - install-docker
-    #- set-hostname
-    # - set-hosts
-    # - set-time-zone
-    # # - new-useradd
+    - install-docker
+    # - new-useradd
   tags:
     - node-config
 
 - name: install kubernetes
-  hosts: all
+  hosts: k8s_cluster
   become: true
   remote_user: root
   roles:
