--- a/ansible/copy-ssh-keys.yaml
+++ b/ansible/copy-ssh-keys.yaml
@@ -5,4 +5,4 @@
     ansible.posix.authorized_key:
       user: astorf
       state: present
-      key: "{{ lookup('file', '/home/astorf/.ssh/id_rsa.pub') }}"
+      key: "{{ lookup('file', '/home/root/.ssh/id_rsa.pub') }}"
