Change copy-ssh-keys.yaml and kuber

--- a/ansible/roles/install-kubernetes/tasks/main.yml
+++ b/ansible/roles/install-kubernetes/tasks/main.yml
@@ -5,11 +5,11 @@
     state: stopped
     enabled: no
 
-- name: Put SELinux in permissive mode, logging actions that would be blocked.
-  ansible.posix.selinux:
-    policy: targeted
-    state: permissive
-  register: selinux_ret
+# - name: Put SELinux in permissive mode, logging actions that would be blocked.
+#   ansible.posix.selinux:
+#     policy: targeted
+#     state: permissive
+#   register: selinux_ret
 
 # - name: Disable SELinux
 #   shell: setenforce 0
