--- a/ansible/copy-ssh-keys.yaml
+++ b/ansible/copy-ssh-keys.yaml
@@ -3,6 +3,6 @@
   tasks:
   - name: Set authorized key taken from file
     ansible.posix.authorized_key:
-      user: astorf
+      user: root
       state: present
       key: "{{ lookup('file', '/home/astorf/.ssh/id_rsa.pub') }}"
