--- a/ansible/host.ini
+++ b/ansible/host.ini
@@ -32,9 +32,9 @@ k8s-n1
 [proxy]
 k8s-proxy
 
-[k8s_cluster:children]
-control_plane
-nodes
+; [k8s_cluster:children]
+; control_plane
+; nodes
 ; #calico_rr
 
 
