Change  Haproxy config

--- a/ansible/roles/haproxy/tasks/main.yaml
+++ b/ansible/roles/haproxy/tasks/main.yaml
@@ -31,7 +31,7 @@
 
 - name: Enable HAProxy
   service:
-    name: "{{ item }}"
+    name: haproxy
     state: started
     enabled: yes
   with_items:
