--- a/ansible/roles/install-tools/tasks/main.yaml
+++ b/ansible/roles/install-tools/tasks/main.yaml
@@ -1,4 +1,10 @@
 ---
+- name: Upgrade all packages
+  ansible.builtin.yum:
+    name: '*'
+    state: latest
+  when: ansible_os_family == "RedHat"
+
 - name: Install packages DNF
   ansible.builtin.dnf:
     name: "{{item}}"
