Change k8s install version

--- a/ansible/roles/install-kubernetes/tasks/k8s-install.yml
+++ b/ansible/roles/install-kubernetes/tasks/k8s-install.yml
@@ -16,9 +16,9 @@
   yum:
     name:
       - containerd.io
-      - kubeadm
-      - kubectl
-      - kubelet
+      - kubeadm-1.27.5
+      - kubectl-1.27.5
+      - kubelet-1.27.5
     state: present
   notify: started kubelet
 
