--- a/ansible/host.ini
+++ b/ansible/host.ini
@@ -7,6 +7,7 @@ k8s-m1 ansible_host=10.4.1.21
 k8s-m2 ansible_host=10.4.1.22
 k8s-m3 ansible_host=10.4.1.23
 k8s-n1 ansible_host=10.4.1.24 
+k8s-n2 ansible_host=10.4.1.25 
 
 
 # ## configure a bastion host if your nodes are not directly reachable
@@ -27,6 +28,7 @@ k8s-m3
 
 [nodes]
 k8s-n1
+k8s-n2
 
 
 [proxy]
