--- a/ansible/roles/install-kubernetes/tasks/main.yml
+++ b/ansible/roles/install-kubernetes/tasks/main.yml
@@ -5,15 +5,15 @@
     state: stopped
     enabled: no
 
-# - name: Put SELinux in permissive mode, logging actions that would be blocked.
-#   ansible.posix.selinux:
-#     policy: targeted
-#     state: permissive
-#   register: selinux_ret
+- name: Put SELinux in permissive mode, logging actions that would be blocked.
+  ansible.posix.selinux:
+    policy: targeted
+    state: permissive
+  register: selinux_ret
 
-# - name: Disable SELinux
-#   shell: setenforce 0
-#   when: selinux_ret.reboot_required    
+- name: Disable SELinux
+  shell: setenforce 0
+  when: selinux_ret.reboot_required    
 
 - name: Enable NTP server
   service:
@@ -48,10 +48,10 @@
   notify: restart containerd
   tags: ['skip_ansible_lint']
 
-- name: Copy files on server
+- name: Copy bashrc on server
   copy: 
-    src: ./files/
-    dest: /home/vagrant/
+    src: .bashrc
+    dest: /root/
     owner: root
     group: root
     mode: 0644 
