Add roles cluster init and helm-charts

--- a/ansible/host.ini
+++ b/ansible/host.ini
@@ -2,12 +2,12 @@
 # ## different ip than the default iface
 # ## We should set etcd_member_name for etcd cluster. The node that is not a etcd member do not need to set the value, or can set the empty string value.
 [all]
-k8s-proxy ansible_host=10.4.1.20
-k8s-m1 ansible_host=10.4.1.21
-k8s-m2 ansible_host=10.4.1.22
-k8s-m3 ansible_host=10.4.1.23
-k8s-n1 ansible_host=10.4.1.24 
-k8s-n2 ansible_host=10.4.1.25 
+; k8s-proxy ansible_host=10.4.1.20
+k8s-m1 ansible_host=10.5.1.21
+; k8s-m2 ansible_host=10.5.1.22
+; k8s-m3 ansible_host=10.5.1.23
+k8s-n1 ansible_host=10.5.1.22 
+k8s-n2 ansible_host=10.5.1.23 
 
 
 # ## configure a bastion host if your nodes are not directly reachable
@@ -16,8 +16,8 @@ k8s-n2 ansible_host=10.4.1.25
 
 [control_plane]
 k8s-m1
-k8s-m2
-k8s-m3 
+; k8s-m2
+; k8s-m3 
 ; # node2
 ; # node3
 
@@ -31,8 +31,8 @@ k8s-n1
 k8s-n2
 
 
-[proxy]
-k8s-proxy
+; [proxy]
+; k8s-proxy
 
 [k8s_cluster:children]
 control_plane
