--- a/ansible/roles/install-tools/tasks/main.yaml
+++ b/ansible/roles/install-tools/tasks/main.yaml
@@ -1,4 +1,11 @@
 ---
+- name: Add Oracle Epel release
+  ansible.builtin.dnf: 
+    name: oracle-epel-release-el8.x86_64
+    state: latest
+    update_cache: true
+  when: "'OracleLinux' in ansible_distribution"
+  
 - name: Upgrade all packages
   ansible.builtin.yum:
     name: '*'
@@ -13,6 +20,9 @@
   with_items: 
     - yum-utils
     - net-tools
+    - htop
+    - iotop
+    - sysstat
     - nano
     - mc
     - iproute-tc
@@ -24,6 +34,7 @@
     - iscsi-initiator-utils
     # - rsyslog
     - chrony
+    - ipvsadm
     - jq
   when: ansible_os_family == "RedHat"   
 
@@ -36,6 +47,9 @@
     - chrony
     - net-tools
     - nano
+    - htop
+    - iotop
+    - sysstat
     - vim
     - python3
     - tcpdump
@@ -45,6 +59,7 @@
     - mc
     - git
     - apt-transport-https
+    - ipvsadm
     - jq
     # - iptables-persistent 
   when: ansible_os_family == "Debian"   
